--- a/backend/config/locales/en.yml
+++ b/backend/config/locales/en.yml
@@ -30,4 +30,17 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  company:
+    success:
+      created: 'Register created with success'
+      updated: "Register updated with success"
+      deleted: "Register deleted with success"
+    failure:
+      created: "Register can't be created"
+      updated: "Register can't be updated"
+    errors:
+      attributes:
+        cnpj:
+          invalid: 'CNPJ is invalid, please verify'
+      not_found: 'Register not found in database'
+
